--- a/src/configure.ac
+++ b/src/configure.ac
@@ -722,9 +722,9 @@ else
     EMC2_SCRIPT=$EMC2_BIN_DIR/linuxcnc
     EMC2_SUFFIX=""
     EMC2_ICON=linuxcncicon
-    EMC2_TCL_DIR=${prefix}/lib/tcltk/linuxcnc
-    EMC2_TCL_LIB_DIR=${prefix}/lib/tcltk/linuxcnc
-    EMC2_LANG_DIR=${prefix}/lib/tcltk/linuxcnc/msgs
+    EMC2_TCL_DIR=${prefix}/lib/tcl8.6/linuxcnc
+    EMC2_TCL_LIB_DIR=${prefix}/lib/tcl8.6/linuxcnc
+    EMC2_LANG_DIR=${prefix}/lib/tcl8.6/linuxcnc/msgs
     EMC2_PO_DIR=${prefix}/share/locale
     EMC2_HELP_DIR=${prefix}/share/doc/linuxcnc
     case $MODULE_DIR in
